--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "particleplay.png",
+        "src": "particleplay_highres.png",
         "sizes": "192x192",
         "type": "image/png"
       }
